maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value x
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
                  ^JediEscaper:21: error: not found: value y
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
                    ^JediEscaper:22: error: not found: value x
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
                      ^JediEscaper:22: error: not found: value y
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
                          ^